Bug 41440 - ACCESSIBILITY: Start Center Texts invisible with high contrast mode
Summary: ACCESSIBILITY: Start Center Texts invisible with high contrast mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.1 release
Hardware: Other All
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.7.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-04 02:46 UTC by Christophe Strobbe
Modified: 2012-09-22 10:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of start screen with mouse hovering over first option (22.48 KB, image/png)
2011-10-04 02:46 UTC, Christophe Strobbe
Details
LibO start screen in Windows Vista with high contrast (30.03 KB, image/png)
2011-10-04 06:09 UTC, Christophe Strobbe
Details
Hicontrast win 7 (32.07 KB, image/jpeg)
2011-10-04 06:57 UTC, Florian Reisinger
Details
OpenOffice.org Start Center in Windows XP high contrast (11.84 KB, image/png)
2011-10-04 07:12 UTC, Christophe Strobbe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Strobbe 2011-10-04 02:46:33 UTC
Created attachment 51921 [details]
screenshot of start screen with mouse hovering over first option

In LibreOffice 3.3.1, the start screen (i.e. the screen with the options you see when you start LibreOffice instead of a specific LibO component) has white text on a white background when using a high contrast mode with inverted colours on Windows XP SP 3.

Steps to reproduce the issue:
1. In Windows XP, go to Display Properties > Appearance, and set "Windows and Buttons" to "Windows Classic Style", and set "Color Scheme" to "High Contrast #1"
2. Open LibreOffice
3. On its start screen, use the Tab button to navigate the options ("Text Document", "Spreadsheet", etcetera) and notice that they remain white. (A dotted rectangle tells you where the keyboard focus is while tabbing, but the text remains white on white.)
4. Use the mouse to hover over the options in the start screen; notice that they become visible as white text in black rectangles.

Desired behaviour:
In high-contrast mode, the start screen has white text on a black background. When you navigate through the options with the Tab key, there is a solid (rather than a dotted) line around the option that has focus. (OpenOffice.org 3.3 got this right.)

The attachment shows the LibreOffice start screen in Windows XP's high contrast mode, with the mouse hovering over "Text Document".
Comment 1 Christophe Strobbe 2011-10-04 06:09:52 UTC
Created attachment 51937 [details]
LibO start screen in Windows Vista with high contrast

To enable high contrast in Windows Vista, go to Control Panel, then Ease of Access Center, then Make the computer easier to see. Check the option "Turn on or off High Contrast when left ALT + left SHIFT + PRINT SCREEN is pressed". After enabling high contrast with left ALT + left SHIFT + PRINT SCREEN, you can launch LibreOffice and reproduce the screen shot. Behaviour on mouse hover is the same as in Windows XP.
Comment 2 Rainer Bielefeld Retired 2011-10-04 06:35:52 UTC
[Reproducible] with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID: 81607ad-3dca5fd-da627d2)]" and Display Properties > Appearance "Classic / Contrast Nr. 1"

Additional settings (I don't know whether important)
Menu 'Tools -> Options -> LibO -> View -> Theme = High Contrast'

My PC:
64 bit AMD Phenom II X4 955 Processor 3.2 GHz, 4GB RAM, 
Graphic Card: NVIDIA GeForce GT 430
Comment 3 Florian Reisinger 2011-10-04 06:57:06 UTC
Created attachment 51956 [details]
Hicontrast win 7

[reproduceable] Win7 LibO 3.4.3. By te way, are the circled items right??
This might be the problem of this bug, is not it?
Comment 4 Christophe Strobbe 2011-10-04 07:12:18 UTC
Created attachment 51960 [details]
OpenOffice.org Start Center in Windows XP high contrast
Comment 5 Christophe Strobbe 2011-10-04 07:16:49 UTC
My screenshots were made without the setting 'Tools -> Options -> LibO -> View -> Icon size and style = High Contrast' (in LibreOffice 3.3.1). When I enable that setting, the icons look worse. Without that setting, they look the same as on Windows XP with a normal theme.

I also uploaded an attachment showing what the OpenOffice.org 3.3 start center looks like in high contrast on Windows XP: it clearly works. Possibly, OOo uses a high-contrast icon set that automatically replaces the normal icons when high contrast is detected in the operating system (I am really guessing here).
Comment 6 Florian Reisinger 2011-10-04 07:25:29 UTC
(In reply to comment #3)
> Created an attachment (id=51956) [details]
> Hicontrast win 7
> 
> [reproduceable] Win7 LibO 3.4.3. By te way, are the circled items right??
> This might be the problem of this bug, is not it?


As you can at comparison of this screenshots: https://bugs.freedesktop.org/attachment.cgi?id=51960 and this one: https://bugs.freedesktop.org/attachment.cgi?id=51956 ;in LibreOffice some icons are not marked as "change at hicolor", or does not exist in the Hicolor-theme, at all! (Sorry if I am wrong, I have not learned how to code yet.) Logically, an attribute must be set for both, text and pictures.
Comment 7 Rainer Bielefeld Retired 2011-10-04 08:25:26 UTC
This bug is CONFIRMED. What exactly do Comments 3 and following want to tell us?
Comment 8 Christophe Strobbe 2011-10-05 03:22:06 UTC
Thanks for confirming the bug.
High contrast in the original bug report refers to a feature in MS Windows XP, i.e. without the high contrast style in LibreOffice's options. Later comments reproduce the bug in more recent versions of Windows and more recent versions of LibreOffice. Switching to the high contrast style in LibreOffice does not solve the issue.

The comparison of screenshots in comment 6 (OpenOffice.org 3.3 with Windows XP high contrast vs LibreOffice 3.4.3 with Windows 7 high contrast) illustrates the issue very well.
Comment 9 Björn Michaelsen 2011-12-23 13:22:56 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 10 Christophe Strobbe 2012-01-27 04:35:01 UTC
Version info was originally LibO 3.3.1. I confirm that this bug is still present in LibreOffice 3.5.0 RC1 (on Windows XP SP3, as in my original comment).
Comment 11 Rainer Bielefeld Retired 2012-09-14 11:48:56 UTC
Still [Reproducible] with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: b45834b]"  {tinderbox: @6, pull time 2012-09-13 00:10:35} on German WIN7 Home Premium (64bit)

Invisible with (High) "Contrast No 1" and  (High) "Contrast Black"

OS High Contrast setting automatically switches LibO theme to High contrast, so it should not be too difficult to indicate that status and to do something with Start Center Background or Text color.


<http://wiki.documentfoundation.org/BugReport_Details#Version>

@Ivan:
I wonder whether other OS have the same problem?
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept
this Bug or forward the Bug if it's not your turf.
Comment 12 Ivan Timofeev (retired) 2012-09-15 10:24:00 UTC
(In reply to comment #11)
> I wonder whether other OS have the same problem?
Yep, see Bug 50296.

Since background image is always white, text on the non-highlighted buttons must be always black.
Comment 13 Not Assigned 2012-09-22 10:50:22 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b034ebe04ba36d8738b3445ce5615f1492868eb

fdo#41440, fdo#50296: start center: force black text color



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.