fdo#41440, fdo#50296: start center: force black text color

Change-Id: I13834d3c0385e1a75d2d66d1622a966c66b9aab2